--- a/client/src/app/user/sign-in/sign-in.component.scss
+++ b/client/src/app/user/sign-in/sign-in.component.scss
@@ -6,6 +6,7 @@
 }
 
 .sign-in-field {
-  max-width: 300px;
-  min-width: 300px;
+  /*max-width: 300px;*/
+  //max-width: calc(100% - 70px);
+  min-width: calc(100% - 30px);
 }
